Quick alignment fix

--- a/scss/hex.scss
+++ b/scss/hex.scss
@@ -71,7 +71,6 @@ body {
   width: 100%;
   text-align: center;
   z-index: 1000;
-  transition: all 300ms ease-in-out .2s;
 }
 .hexThumb img {
   max-width: 250px;
