--- a/scss/team.scss
+++ b/scss/team.scss
@@ -42,8 +42,8 @@
   font-size: 18px;
   position: absolute;
   top: 42%;
-  left:15%;
-  right:15%;
+  left:17%;
+  right:13%;
   letter-spacing: 1px;
   z-index: 1000;
   transition: all 300ms ease-in-out .2s;
